name:                pcap-conduit
version:             0.1.0.0
synopsis:            Conduit <-> libpcap
description:
  Provides a Conduit Source for reading from pcap files or live network
  devices.
homepage:            http://github.com/thoughtpolice/pcap-conduit
bug-reports:         https://github.com/thoughtpolice/pcap-conduit/issues
license:             BSD3
license-file:        LICENSE.txt
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Network, Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.0.4, GHC==7.2.1

extra-source-files:
  README.md, tests/Properties.hs

source-repository head
  type: git
  location: https://github.com/thoughtpolice/pcap-conduit.git

library
  exposed-modules: Data.Conduit.Pcap
  build-depends:
    base         >= 3 && < 5,
    pcap         >= 0.4,
    conduit      >= 0.4,
    bytestring   >= 0.9

  ghc-options:      -Wall -O2 -fwarn-tabs
  default-language: Haskell98

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 3 && < 5,
    bytestring     >= 0.9,
    QuickCheck     >= 2.4,
    test-framework >= 0.5,
    test-framework-quickcheck2 >= 0.2,
    pcap-conduit

  ghc-options:      -fno-cse -fno-warn-orphans
  default-language: Haskell98
